tests/paczka2/big_fuzzy/65564316.err
Error in line 4: 1Ge A752 83,5
Error in line 12: bX9p A752 48,7
Error in line 19: bX9p A357 44,8
Error in line 18: 1Ge S537 46,6
Error in line 29: OqtM2ziY A752 25,3
Error in line 38: 4jun S537 34,2
Error in line 43: 4jun A357 3,5
Error in line 36: bGWV4wV S537 28,0
Error in line 47: A357 S991 69,8
Error in line 52: A357 A752 39,1
Error in line 59: 1Ge S537 27,0
Error in line 65: 9eni3 A357 63,5
Error in line 70: 9eni3 A752 53,4
Error in line 78: bGWV4wV A357 65,8
Error in line 81: 4jun A357 22,2
Error in line 84: bX9p A357 12,3
Error in line 86: 1Ge A752 84,3
Error in line 104: 9eni3 S537 35,8
Error in line 103: A357 A752 30,7
Error in line 129: 4jun A752 95,2
Error in line 128: bX9p S991 73,4
Error in line 144: 9eni3 S53 55,2
Error in line 147: OqtM2ziY S537 72,8
Error in line 158: bGWV4wV S991 76,7
Error in line 157: bX9p S991 4,4
Error in line 164: 9eni3 S537 312,8
Error in line 168: 1Ge S991 28,9
Error in line 175: OqtM2ziY S991 138,7
Error in line 189: 4jun S991 26,22
Error in line 193: OqtM2ziY S537 -5,1
Error in line 201: 1Ge S991 38,66
Error in line 202: bX9p S991 8,2
Error in line 203: bX9p S537 66,9
Error in line 182: OqtM2ziY S537 97,5
Error in line 186: 4jun S991 15,9
Error in line 197: A357 S537 250,9
Error in line 222: bX9p A752 49,6
Error in line 242: 4jun A357 46,0
Error in line 240: 9eni3 A357 56,8
Error in line 245: 4jun S537 58,1
